# passwordless-pki-demo

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json
client/: README.md  index.html  package-lock.json  package.json
client/public/: site.webmanifest
client/src/: App.vue  main.js
client/src/components/: FormHelpDescription.vue  Landing.vue
client/src/router/: index.js
client/src/utils/: app.js  crypto.js  db.js  device.js
client/src/views/: AdminView.vue  HomeView.vue  RegisterView.vue  SessionView.vue
server/: public_keys.db  pyproject.toml  requirements.txt
server/src/: models.py  server.py  utils.py
